Store and use last base URL between DidStart / DidStopLoading

As it turns out that the committed entry may omit the base
URL if there has been a javascript: URL navigation after
LoadDataWithBaseURL. Thus we have to store the base url on
DidStartLoading and use it in DidStopLoading / DidFinishLoad.

We have to preserve the old hack with SetToBaseURLForDataURLIfNeeded
because if the base URL is not valid, DidFinishLoad doesn't
receive it from the renderer.

This change is a short-term workaround. The correct solution
is to pass a flag that the load was through LoadDataWithBaseURL
via Blink, so base URL can be restored correctly within
NavigationController.

BUG=594001

Review URL: https://codereview.chromium.org/1779363004

Cr-Commit-Position: refs/heads/master@{#381108}

Former-commit-id: ce1f4d009316d8f5f4c49b18e1bd94687d80c59d